# PURR

./: .flake8  .gitignore  MANIFEST.in  README.md  babel.cfg  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.cfg  setup.py  url_map.json  webpack-build-config.json  webpack-bundles.json
.github/workflows/: build.yml
indico_jpsp_ab/: __init__.py  blueprint.py  controllers.py  forms.py  logger.py  plugin.py  services.py  tests.py  utils.py  wrappers.py
indico_jpsp_ab/client/app/: jpsp-ab.app.js  jpsp-ng.app.js  jpsp-ng.lib.js
indico_jpsp_ab/client/app/components/: abstract-booklet.js  jpsp-ng.settings.js
indico_jpsp_ab/client/app/vanilla/: create-component.js
indico_jpsp_ab/client/app/vanilla/components/: abstract-booklet.js  check-button.js  download-button.js  download-progress.js
indico_jpsp_ab/client/css/: jpsp-ng.app.scss
indico_jpsp_ab/controllers/: utils.py
indico_jpsp_ab/controllers/html/: connect_page.py  disconnect_page.py  home_page.py  settings_page.py
indico_jpsp_ab/controllers/json/: event_files_json.py  event_json.py  revision_check_pdf_json.py
indico_jpsp_ab/migrations/: 20221017_1006_a23f5fe2724d_settings_model.py  20221127_1723_688f6f522617_added_ab_params.py
indico_jpsp_ab/models/: settings.py
indico_jpsp_ab/services/: export_event.py  export_event_files.py  export_file.py  export_revision_file.py  export_utils.py
indico_jpsp_ab/templates/: 44.json  connect.html  disconnect.html  get.html  home.html  settings.html
indico_jpsp_ab/translations/: messages.pot
indico_jpsp_ab/translations/es_ES/LC_MESSAGES/: messages-js.po
indico_purr/: __init__.py  blueprint.py  forms.py  logger.py  plugin.py  settings.py  utils.py  wrappers.py
indico_purr/client/app/: purr.ab.js  purr.app.js  purr.error.alert.js  purr.fp.js  purr.lib.js  purr.old.js  purr.pc.js  purr.rest.js  purr.root.js  purr.sc.js  purr.sd.js  purr.spa.js
indico_purr/client/app/api/: purr.api.js
indico_purr/client/app/components/: jpsp-ng.download.js
indico_purr/client/app/connect/: purr.connect.dialog.js
indico_purr/client/app/contexts/: ErrorProvider.jsx
indico_purr/client/app/final-proceedings/: purr.doi.panel.js  purr.fp.logger.js  purr.fp.panel.js
indico_purr/client/app/settings/: purr.settings.abstract-booklet.js  purr.settings.dialog.js  purr.settings.final-proceedings.js  purr.settings.pdf-check.js
indico_purr/client/app/utils/: purr.utils.js
indico_purr/client/css/: purr.app.scss
indico_purr/controllers/: utils.py
indico_purr/controllers/html/: connect_page.py  disconnect_page.py  home_page.py  settings_page.py
indico_purr/controllers/json/: abstract_booklet.py  event_files_json.py  event_json.py  final_proceedings.py
indico_purr/controllers/json/__deprecated/: event_files_json.py  revision_check_pdf_json.py
indico_purr/controllers/json/abstract_booklet/: contributions_data.py  sessions_data.py
indico_purr/controllers/json/common/: connect_data.py  disconnect_data.py  event_data.py  settings_data.py
indico_purr/controllers/json/final_proceedings/: __init__.py  attachments_data.py  contributions_data.py  sessions_data.py
indico_purr/migrations/: 20221017_1006_a23f5fe2724d_settings_model.py  20221127_1723_688f6f522617_added_ab_params.py
indico_purr/models/: connection.py  settings.py  validation.py
indico_purr/services/: abstract_booklet_exporter.py  export_event.py  export_event_files.py  export_file.py  export_revision_file.py  export_utils.py  final_proceedings_exporter.py
indico_purr/services/__deprecated/: export_event_files.py  export_revision_file.py
indico_purr/services/exporter/: abstract_event_exporter.py  abstract_file_exporter.py  common_exporter_utils.py
indico_purr/templates/: connect.html  disconnect.html  home.html  settings.html
indico_purr/translations/: messages-js.pot
indico_purr/translations/es_ES/LC_MESSAGES/: messages.po
