[metadata]
name = jpsp-ng-plugin
version = 1.0-dev
description = JPSP-NG plugin for Indico
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2
    orjson>=3.8.0

[options.entry_points]
indico.plugins =
    jpsp_ab = indico_jpsp_ab:plugin:JpspNgPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
