[metadata]
name = indico-plugin-purr
version = 3.2-dev
description = Proceedings Utility Running Remotely
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/JACoW-org/PURR
license = MIT
author = Akera srl
author_email = fabio.meneghetti@akera.it
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.13
install_requires =
    indico>=3.2

[options.entry_points]
indico.plugins =
    purr = indico_purr.plugin:PurrPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
